--- a/app/src/styles/globals.css
+++ b/app/src/styles/globals.css
@@ -8,6 +8,7 @@
 
     --primary-color: #f56646;
     --secondary-color: #40b267;
+    --hover-color-light: #858585;
     --hover-color: #454545;
 
     --font-family: Space Grotesk, sans-serif;
