--- a/app/src/styles/Index.module.css
+++ b/app/src/styles/Index.module.css
@@ -3,14 +3,20 @@
     flex-direction: column;
     max-width: 1280px;
     margin: auto;
+}
+
+.content {
+    padding: 0 1em;
+}
+
+.container_project {
+    flex: 1;
+}
+
+.container_data {
+    padding-top: 0.4em;
+    padding-bottom: 0.1em; /* Hack remove if you will find why padding disappear */
+    flex: 1;
     background-color: var(--background-second-color-dark);
     border-radius: 1em;
-}
-
-.container_index > .top_bar {
-    flex: 1;
-}
-
-.container_index > .table_data {
-    flex: 1;
 }
