--- a/app/src/styles/NumInput.module.css
+++ b/app/src/styles/NumInput.module.css
@@ -6,9 +6,21 @@
     border-radius: 0.4em;
     padding: 0.6em 1em;
     outline: none;
-    width: 100%;
+    width: 80px;
     color: var(--text-main-color-dark);
     font-family: Space Grotesk, sans-serif;
+}
+
+/* Chrome, Safari, Edge, Opera hide arrows */
+.container_input::-webkit-outer-spin-button,
+.container_input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox hide arrows */
+.container_input[type="number"] {
+    -moz-appearance: textfield;
 }
 
 .container_input:focus {
