--- a/app/src/styles/TopBar.module.css
+++ b/app/src/styles/TopBar.module.css
@@ -1,28 +1,81 @@
 .container_topbar {
     width: 95%;
     margin: auto;
-    padding-top: 1em;
 }
 
-.filter_owners {
+.topbar_row {
     display: flex;
+    margin: 0;
 }
 
-.filter_owners > h2 {
+.topbar_row > .element {
     flex: 3;
     margin: 0;
-    padding-top: 0.5em;
-    font-size: 24px;
 }
 
-.filter_owners > .input_short {
+.topbar_row > .element + .element {
+    margin-left: 1em;
+}
+
+.topbar_row + .topbar_row {
+    margin-top: 1.5em;
+}
+
+/* Columns visibility */
+.columns_checkbox {
+    background-color: var(--background-color-dark);
+    border-radius: 1em;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 1em;
+}
+
+.columns_checkbox .columns_checkbox_group {
+    margin: 0;
+    padding: 0.2em 1em;
+    min-width: 15em;
     flex: 1;
+}
+
+/* Navigation */
+.input_short {
+    display: flex;
+    flex: 2;
     margin: 0;
     margin-right: 1em;
+    /* border: 1px solid yellow; */
 }
 
-.filter_owners > .input_long {
-    flex: 3;
+.input_short .input_inner {
+    flex: 1;
     margin: 0;
-    margin-left: 1em;
+}
+
+.input_short .input_inner + .input_inner {
+    flex: 2;
+}
+
+.page_navigation {
+    flex: 1;
+    margin: 0;
+    /* border: 1px solid red; */
+}
+
+.container_input_inner {
+    display: flex;
+    margin: 0;
+}
+
+.container_input_inner p {
+    padding-top: 0.4em;
+    padding-right: 1em;
+    text-align: right;
+    margin: 0;
+}
+
+@media (max-width: 1000px) {
+    .container_input_inner p {
+        display: none;
+    }
 }
