--- a/app/src/styles/TopBar.module.css
+++ b/app/src/styles/TopBar.module.css
@@ -8,6 +8,12 @@
     margin: 0;
 }
 
+@media (max-width: 480px) {
+    .topbar_row {
+        flex-direction: column;
+    }
+}
+
 .topbar_row > .element {
     flex: 3;
     margin: 0;
@@ -15,6 +21,12 @@
 
 .topbar_row > .element + .element {
     margin-left: 1em;
+}
+
+@media (max-width: 480px) {
+    .topbar_row > .element + .element {
+        margin: 1em 0 0 0;
+    }
 }
 
 .topbar_row + .topbar_row {
@@ -44,7 +56,12 @@
     flex: 2;
     margin: 0;
     margin-right: 1em;
-    /* border: 1px solid yellow; */
+}
+
+@media (max-width: 480px) {
+    .input_short {
+        flex-direction: column;
+    }
 }
 
 .input_short .input_inner {
@@ -56,10 +73,15 @@
     flex: 2;
 }
 
+@media (max-width: 480px) {
+    .input_short .input_inner + .input_inner {
+        margin: 1em 0 0 0;
+    }
+}
+
 .page_navigation {
     flex: 1;
     margin: 0;
-    /* border: 1px solid red; */
 }
 
 .container_input_inner {
@@ -67,15 +89,15 @@
     margin: 0;
 }
 
+@media (max-width: 480px) {
+    .page_navigation {
+        margin: 1em 0 0 0;
+    }
+}
+
 .container_input_inner p {
     padding-top: 0.4em;
     padding-right: 1em;
     text-align: right;
     margin: 0;
-}
-
-@media (max-width: 1000px) {
-    .container_input_inner p {
-        display: none;
-    }
 }
