--- a/app/src/styles/Button.module.css
+++ b/app/src/styles/Button.module.css
@@ -1,8 +1,5 @@
 .button {
-    align-items: center;
-    display: inline;
-
-    background-color: var(--background-second-color-dark);
+    background-color: var(--background-color-dark);
     border: 1px solid var(--text-main-color-dark);
     border-radius: 8px;
     color: var(--text-color-light);
@@ -10,12 +7,16 @@
     font-weight: var(--font-weight);
     margin: 0 0.2em;
     padding: 0.6em 1em;
-    outline: none;
+}
+
+.button:focus {
+    border: 1px solid var(--primary-color);
+    color: var(--primary-color);
 }
 
 .button:hover {
-    background-color: var(--background-color-dark);
-    border: 1px solid var(--text-main-color-dark);
+    border: 1px solid var(--primary-color);
+    color: var(--primary-color);
     cursor: pointer;
 }
 
